# libtofcore

./: README.md
tofcore/: CMakeLists.txt
tofcore/include/tofcore/: connection.hpp  crc32.h
tofcore/src/: connection.cpp  crc32.cpp  tof_sensor.cpp
tofcore/src/comm_ip/: ip_connection.cpp  ip_connection.hpp  tcp_connection.cpp  tcp_connection.hpp  udp_server.cpp  udp_server.hpp
tofcore/src/comm_serial/: serial_connection.cpp  serial_connection.hpp
tofcore/src/device_discovery/: ip_device_discovery.cpp
tofcore/test/functional-tests/: CMakeLists.txt
tofcore/test/functional-tests/tof-read-csv/: CMakeLists.txt  tof-read-csv.cpp
